# Overmix

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  documentation.json  overmix-cli.pri  overmix.pri  overmix.pro
benchmark/: CMakeLists.txt  benchmark.pro  main.cpp
interface/: CMakeLists.txt  main-align.cpp  main-cli.cpp  main-edge.cpp  main.cpp
interface/cli/: AlignParser.cpp  CommandParser.cpp  CommandParser.hpp  ComparatorParser.cpp  Parsers.hpp  Parsing.hpp  Processor.cpp  Processor.hpp  RenderParser.cpp
interface/gui/: AlignMethodSelector.cpp  AlignMethodSelector.hpp  ExceptionCatcher.cpp  ExceptionCatcher.hpp  ExceptionCatcher.ui  FullscreenViewer.cpp  FullscreenViewer.hpp  ImagesModel.cpp  ImagesModel.hpp  MaskModel.cpp  MaskModel.hpp  ProgressWatcher.hpp  Spinbox2D.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
interface/gui/configs/: AConfig.hpp  AlignerConfigs.cpp  AlignerConfigs.hpp  AlignerConfigsInternal.hpp  ComparatorConfigs.cpp  ComparatorConfigs.hpp  ComparatorConfigsInternal.hpp  ConfigChooser.hpp  RenderConfigs.cpp  RenderConfigs.hpp  RenderConfigsInternal.hpp  imagealigner.ui
interface/gui/importers/: VideoImporter.cpp  VideoImporter.hpp  VideoImporter.ui  VideoPreviewModel.cpp  VideoPreviewModel.hpp
interface/gui/processors/: AProcessor.cpp  AProcessor.hpp  AProcessorFactory.cpp  AProcessorFactory.hpp  ProcessBinarize.cpp  ProcessBinarize.hpp  ProcessBinarizeAdaptive.cpp  ProcessBinarizeAdaptive.hpp  ProcessBlur.cpp  ProcessBlur.hpp  ProcessColor.cpp  ProcessColor.hpp  ProcessCrop.cpp  ProcessCrop.hpp  ProcessDeVlc.cpp  (+23 more)
interface/qcustomplot/: qcustomplot.cpp
src/: AImageAligner.cpp  AImageAligner.hpp  ARender.hpp  ARenderPipe.hpp  AnimatedAligner.cpp  AnimatedAligner.hpp  AnimationSaver.cpp  AnimationSaver.hpp  AverageAligner.cpp  AverageAligner.hpp  CMakeLists.txt  CommandParser.cpp  CommandParser.hpp  Deteleciner.cpp  Deteleciner.hpp  DiffRender.cpp  DiffRender.hpp  DifferenceRender.cpp  FakeAligner.hpp  FloatRender.cpp  FloatRender.hpp  Geometry.hpp  Image.hpp  ImageAligner.cpp  ImageAligner.hpp  ImageEx.cpp  ImageEx.hpp  LayeredAligner.cpp  LayeredAligner.hpp  MultiImage.cpp  MultiImage.h  MultiImage.hpp  MultiImageIterator.cpp  MultiImageIterator.h  MultiImageIterator.hpp  MultiPlaneIterator.cpp  MultiPlaneIterator.hpp  Plane-binarize.cpp  Plane-blurring.cpp  Plane-diff.cpp  (+29 more)
src/aligners/: AAligner.hpp  AImageAligner.cpp  AImageAligner.hpp  AnimatedAligner.cpp  AnimatedAligner.hpp  AnimationSaver.cpp  AnimationSaver.hpp  AnimationSeparator.cpp  AnimationSeparator.hpp  AverageAligner.cpp  AverageAligner.hpp  ClusterAligner.cpp  ClusterAligner.hpp  FakeAligner.hpp  FrameAligner.cpp  FrameAligner.hpp  FrameCalculatorAligner.hpp  ImageAligner.cpp  ImageAligner.hpp  IndependentAligner.cpp  IndependentAligner.hpp  LayeredAligner.cpp  LayeredAligner.hpp  LinearAligner.cpp  LinearAligner.hpp  NearestFrameAligner.cpp  NearestFrameAligner.hpp  RecursiveAligner.cpp  RecursiveAligner.hpp  SuperResAligner.cpp  SuperResAligner.hpp
src/cli/: CommandParser.cpp  Parsing.hpp  Processor.cpp  Processor.hpp
src/comparators/: AComparator.cpp  AComparator.hpp  BruteForceComparator.cpp  BruteForceComparator.hpp  GradientComparator.cpp  GradientComparator.hpp  GradientPlane.cpp  GradientPlane.hpp  LogPolarComparator.cpp  LogPolarComparator.hpp  MultiScaleComparator.cpp  MultiScaleComparator.hpp  SimpleComparatorBase.hpp
src/containers/: AContainer.cpp  AContainer.hpp  AlignGroup.cpp  AlignGroup.hpp  DelegatedContainer.hpp  FrameContainer.hpp  ImageContainer.cpp  ImageContainer.hpp  ImageContainerSaver.cpp  ImageContainerSaver.hpp  ImageGroup.hpp  RenderGroup.cpp  RenderGroup.hpp
src/degraders/: JpegDegrader.cpp  JpegDegrader.hpp
src/dump/: DumpPlane.hpp
src/gpu/: GpuBuffer.cpp  GpuBuffer.hpp  GpuCommandBuffer.hpp  GpuCommandEncoder.hpp  GpuComputePass.hpp  GpuDevice.cpp  GpuDevice.hpp  GpuHandle.hpp  GpuInstance.cpp  GpuInstance.hpp  GpuPlane.cpp  GpuPlane.hpp  GpuQueue.hpp
src/gui/: FullscreenViewer.cpp  FullscreenViewer.hpp  ImagesModel.cpp  ImagesModel.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/planes/: ColorSpace.cpp  ColorSpace.hpp  DistanceMatrix.cpp  DistanceMatrix.hpp  FourierPlane.cpp  FourierPlane.hpp  ImageEx-dump.cpp  ImageEx-jpeg.cpp  ImageEx-libraw.cpp  ImageEx-png.cpp  ImageEx-qimage.cpp  ImageEx.cpp  ImageEx.hpp  JpegImage.cpp  JpegImage.hpp  JpegWrapper.hpp  PatternRemove.cpp  PatternRemove.hpp  Plane-binarize.cpp  Plane-blurring.cpp  Plane-diff.cpp  Plane-edgedetection.cpp  Plane-pixel.cpp  Plane-scaling.cpp  Plane.cpp  Plane.hpp  PlaneBase.hpp  PlaneExcept.cpp  PlaneExcept.hpp  PorterDuff.cpp  PorterDuff.hpp
src/renders/: ARender.hpp  AnimRender.cpp  AnimRender.hpp  AverageRender.cpp  AverageRender.hpp  DiffRender.cpp  DiffRender.hpp  DifferenceRender.hpp  DistanceMatrixRender.cpp  DistanceMatrixRender.hpp  EstimatorRender.cpp  EstimatorRender.hpp  FastRender.cpp  FastRender.hpp  FloatRender.cpp  FloatRender.hpp  FocusStackingRender.cpp  FocusStackingRender.hpp  JpegConstrainerRender.cpp  JpegConstrainerRender.hpp  JpegRender.cpp  JpegRender.hpp  MedianRender.cpp  MedianRender.hpp  ParallaxRender.cpp  ParallaxRender.hpp  PixelatorRender.cpp  PixelatorRender.hpp  PlaneRender.cpp  PlaneRender.hpp  RobustSrRender.cpp  RobustSrRender.hpp  SimpleRender.cpp  SimpleRender.hpp  StatisticsRender.cpp  StatisticsRender.hpp
src/shaders/: CMakeLists.txt  colorMatrix.comp  focus_edge.comp  hotpixel.comp  kernel3x3int.comp  level.comp  luminanceAdjust.comp  nlm.comp  saturation.comp
src/utils/: AProcessWatcher.hpp  Animator.cpp  Animator.hpp  ImageLoader.cpp  ImageLoader.hpp  PlaneUtils.hpp  SRSampleCreator.cpp  SRSampleCreator.hpp  utils.hpp
src/video/: Video.cpp  Video.hpp  VideoFrame.cpp  VideoFrame.hpp  VideoStream.cpp  VideoStream.hpp
src/viewer/: colorManager.cpp  imageCache.cpp  imageCache.h  imageViewer.cpp  imageViewer.h  qrect_extras.h
trainer/: CMakeLists.txt  ConfusionMatrix.hpp  MainWindow.cpp  MainWindow.hpp  Slide.cpp  Slide.hpp  SlideModel.hpp  main.cpp
(+75 files in other folders)
